[package]
name = "yz-nomstr"
description = "A simple escaped string literal parser using nom"
version = "0.2.1"
authors = [
    "Eijebong <eijebong@bananium.fr>",
    "Geal <contact@geoffroycouprie.com>",
    "Lucretiel <Lucretiel@gmail.com>",
    "zserik <zseri.devel@ytrizja.de>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/YZITE/nomstr"

[dependencies]

[dependencies.nom]
version = "5"
default-features = false
